@@ -53,6 +53,8 @@ enum GUIIcon {
 	GUI_ICON_BUTTON_TRIANGLE,
 	GUI_ICON_BUTTON_SQUARE,
 	GUI_ICON_BUTTON_HOME,
+	GUI_ICON_STATUS_FAST_FORWARD,
+	GUI_ICON_STATUS_MUTE,
 	GUI_ICON_MAX,
 };
 
